[package]
name = "rust_code"
version = "0.1.0"
authors = ["mamingfeng <393227384@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winping = "0.10.0"
futures = "0.3.1"
ipnet = "2.3.0"
pnet = "0.26.0"
encoding_rs = "0.8.23"
regex = "1.3.7"